# kwin-effects-minimizescale

./: CMakeLists.txt  README.md
package/contents/code/: main.js
src/: CMakeLists.txt  MinimizeScaleConfig.kcfgc  MinimizeScaleEffect.cc  MinimizeScaleEffect.h  TimeLine.h  config.kcfg  config.kcfgc  minimizescale.json  options.kcfg  plugin.cc
src/kcm/: CMakeLists.txt  MinimizeScaleEffectKCM.cc  MinimizeScaleEffectKCM.h  metadata.json  plugin.cc
